[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 12.0
margin_right = 20.0
margin_bottom = 26.0
text = "Map"

[node name="VSlider" type="VSlider" parent="."]
margin_left = 886.0
margin_top = 179.0
margin_right = 983.0
margin_bottom = 364.0
focus_mode = 0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 22.0
margin_top = 414.0
margin_right = 218.0
margin_bottom = 578.0
color = Color( 0.298039, 0.298039, 0.298039, 0.862745 )

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
margin_right = 191.0
margin_bottom = 156.0
text = "test"

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 133.0
margin_bottom = 59.0
focus_mode = 2
text = "Menu"
flat = false
items = [ "Legend", null, 0, false, false, 0, 0, null, "", false, "Info", null, 0, false, false, 1, 0, null, "", false ]

[node name="LevelButton" type="MenuButton" parent="."]
margin_left = 882.0
margin_top = 26.0
margin_right = 999.0
margin_bottom = 69.0
focus_mode = 2
text = "Level"
flat = false

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_right = 192.0
margin_bottom = 120.0
window_title = "Color Legend"

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 112.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/VBoxContainer"]
margin_top = 45.0
margin_right = 176.0
margin_bottom = 59.0
alignment = 1

[node name="Label" type="Label" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 14.0
text = "testtest"

[node name="MarginContainer" type="MarginContainer" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 113.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 176.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 190.0
margin_top = 25.0
margin_right = 372.0
margin_bottom = 49.0
placeholder_text = "Enter a name"
caret_blink = true

[node name="SearchButton" type="Button" parent="."]
margin_left = 390.0
margin_top = 27.0
margin_right = 456.0
margin_bottom = 47.0
text = "Search..."

[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="pressed" from="SearchButton" to="." method="_on_SearchButton_pressed"]
